--- a/style/sass.css
+++ b/style/sass.css
@@ -6568,6 +6568,7 @@ body {
     font-weight: 400;
     line-height: normal;
     padding: 1em 0em 1em 0em;
+    height: 15vh;
   }
   .section_testimonios .cont1_testimonio .cont_contac_testimonio {
     display: none;
@@ -6604,27 +6605,32 @@ body {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    padding-bottom: 1em;
+    padding-bottom: 0em;
+    height: 15vh;
   }
   .section_testimonios .cont2_testimonio .cont_avatar_testimonio {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-row: 100%;
     align-items: center;
-    padding-top: 1em;
+    padding-top: 0em;
     border-top: 0.5px solid #8F8F8F;
-    gap: 1em;
+    gap: none;
+    justify-content: space-between;
   }
   .section_testimonios .cont2_testimonio .cont_avatar_testimonio .avatar {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 1em;
+    gap: 0em;
+  }
+  .section_testimonios .cont2_testimonio .cont_avatar_testimonio .avatar img {
+    transform: scale(0.8);
   }
   .section_testimonios .cont2_testimonio .cont_avatar_testimonio .avatar .cont_data_avatar h2 {
     color: #000;
     font-family: Plus Jakarta Sans;
-    font-size: 20px;
+    font-size: 15px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -6632,7 +6638,7 @@ body {
   .section_testimonios .cont2_testimonio .cont_avatar_testimonio .avatar .cont_data_avatar p {
     color: #7E7E7E;
     font-family: Plus Jakarta Sans;
-    font-size: 16px;
+    font-size: 13px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -6641,8 +6647,8 @@ body {
     padding-top: 1em;
     width: 100%;
     display: flex;
-    gap: auto;
-    justify-content: space-between;
+    gap: 30px;
+    justify-content: end;
   }
 }
 /* ################# RESPONSIVE INICIO ############## */
