--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -5,16 +5,18 @@
     .home__inicio {
         display: flex;
         flex-direction: row;
-        height: 100vh;
         margin-left: 5em;
         margin-right: 5em;
-        gap: 8em;
+        gap: 10em;
+        align-items: center; 
+        
 
         .home__inicio__conten1 {
             display: flex;
             flex-direction: column;
             align-items: start;
             justify-content: center;
+            margin-top: 3em;
 
             .inicio__titulo {
                 font-family: 'Sora';
@@ -146,9 +148,8 @@
         }
 
         .inicio__img {
-            align-items: start;
-            justify-content: start;
-            width: 100%;
+
+            width: 70%;
         }
 
     }
@@ -919,7 +920,7 @@
     overflow: hidden;
     background: #111111;
     width: 100%;
-    margin-bottom: 5em;
+    margin-bottom: 0em;
     display: flex;
     flex-direction: column;
     padding: 4em 0em 4em 0em;
@@ -1171,6 +1172,7 @@
                 flex-direction: column;
                 align-items: start;
                 justify-content: center;
+                margin-top: 3em;
 
                 .inicio__titulo {
                     margin-top: 0.5em;
@@ -1311,6 +1313,7 @@
             }
 
             .inicio__img {
+                margin-top: 2em;
                 display: flex;
                 margin-left: 1em;
                 margin-right: 1em;
@@ -2010,12 +2013,14 @@
             margin-right: 3em;
             gap: 0em;
             height: auto;
+            margin-top: 0em;
 
             .home__inicio__conten1 {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                margin-top: 0em;
 
                 .inicio__titulo {
                     margin-top: 0.5em;
@@ -2991,8 +2996,8 @@
             display: flex;
             height: auto;
             flex-direction: column;
-            margin-left: 3em;
-            margin-right: 3em;
+            margin-left: 1em;
+            margin-right: 1em;
             gap: 0em;
 
             .home__inicio__conten1 {
@@ -3000,6 +3005,7 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                margin-top: 0em;
 
                 .inicio__titulo {
                     margin-top: 0.5em;
