--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -988,3 +988,11 @@
 }
 
 
+.logoindex{
+    display: flex;
+    height: 100vh;
+    background: rgb(255, 255, 255);
+    align-items: center;
+    justify-content: center;
+}
+
